# real-work

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/calculator_api/: config.json
examples/calculator_api/tests/: test_app.py  test_calculator.py
src/: __init__.py
src/agents/: __init__.py  llm_agent.py
src/core/: __init__.py  config.py  episode_controller.py  rollout_manager.py  test_runner.py  trajectory.py
src/environments/: __init__.py  environment.py
src/plugins/: __init__.py  base.py  builtin.py  manager.py
tests/: __init__.py  test_component_integration.py  test_e2e_framework.py  test_framework.py  test_main_usage.py  test_real_e2e.py  test_tool_calling.py
